--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "motion-v": "^1.2.0",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.13"
   },
